templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: 
spec:
  selector:
    istio: egressgateway
  servers: []
