templates/destrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: 
spec:
  host: 
  subsets:
  - name:
