templates/service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: 
spec:
  hosts: []
  ports: []
  resolution: DNS
