templates/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: 
spec:
  hosts: []
  gateways:
  - mesh
